# rust-serve-embedded-static-files

./: Cargo.toml  Makefile.toml  README.md  build.rs
src/: main.rs
web/: index.html  package-lock.json  package.json
web/src/: App.svelte
