[package]
name = "rust-serve-embedded-static-files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
#actix-files = "0.6.2"
#anyhow = "1.0"
static-files = "0.2"
once_cell = "1"

[build-dependencies]
static-files = "0.2"